<resources>
    <string name="app_name">Chato-Fy</string>
    <string name="roll_label">Roll No.</string>
    <string name="login_pass">Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="forgot_string">Forgot Password ?</string>
    <string name="welcome_text">Welcome</string>
    <string name="Signuprollnumber">Roll Number</string>
    <string name="SignupPassword">Password</string>
    <string name="repeatPAsswordSignup">Confirm Password</string>
    <string name="SignUpRegister">Register</string>
    <string name="arsingup">Already Registered.?</string>
    <string name="SUlabel">Sign Up</string>
    <string name="forgotSignin">Sign In?</string>
    <string name="forgotRoll">Roll Number</string>
    <string name="forgotNewPass">New Password</string>
    <string name="forgotConformPass">Confirm Password</string>
    <string name="forgotChangePassButton">Change Password</string>
    <string name="hint_Roll">Roll Number</string>
    <string name="hint_Password">Password</string>
</resources>
