<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.chato_fy.MainActivity"
    android:textAlignment="center">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/rollNumberTextInput"
        android:layout_marginTop="71dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_below="@+id/rollNumberTextInput"
        android:layout_alignLeft="@+id/rollNumberTextInput"
        android:layout_alignStart="@+id/rollNumberTextInput"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_pass"
        android:id="@+id/passwordLabel"
        android:layout_alignBottom="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/roll_label"
        android:id="@+id/rollNumberLabel"
        android:layout_above="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/passwordText"
        android:layout_toRightOf="@+id/rollNumberLabel"
        android:layout_toEndOf="@+id/rollNumberLabel"
        android:onClick="checkLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:id="@+id/signupButton"
        android:layout_alignTop="@+id/loginButton"
        android:layout_toRightOf="@+id/loginButton"
        android:layout_toEndOf="@+id/loginButton"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:onClick="goToSignUpActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_string"
        android:id="@+id/forgotPasswordLabel"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:clickable="true"
        android:onClick="gotoForgotPasswordActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_text"
        android:id="@+id/welcomeLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />
</RelativeLayout>
