<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.chato_fy.SignUpActivity"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SUlabel"
        android:id="@+id/signupLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Signuprollnumber"
        android:id="@+id/SingnupRollNumberLabel"
        android:layout_below="@+id/signupLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SignupPassword"
        android:id="@+id/SignupPasswordLabel"
        android:layout_below="@+id/SingnupRollNumberLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/repeatPAsswordSignup"
        android:id="@+id/repeatPasswordLabel"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/signupLabel"
        android:layout_toStartOf="@+id/signupLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rollNumberField"
        android:layout_above="@+id/SignupPasswordLabel"
        android:layout_alignLeft="@+id/signupLabel"
        android:layout_alignStart="@+id/signupLabel"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_alignBottom="@+id/SignupPasswordLabel"
        android:layout_alignLeft="@+id/rollNumberField"
        android:layout_alignStart="@+id/rollNumberField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repeatPasswordField"
        android:layout_alignTop="@+id/repeatPasswordLabel"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUpRegister"
        android:id="@+id/registerButton"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/repeatPasswordLabel"
        android:layout_centerHorizontal="true"
        android:onClick="checkRegister" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/arsingup"
        android:id="@+id/alreadyRegisteredText"
        android:layout_marginBottom="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/signupLabel"
        android:layout_alignEnd="@+id/signupLabel"
        android:clickable="true"
        android:onClick="gotoMainActivity" />

</RelativeLayout>
